## Client[0.95b] - 2015-12-31
### Added
 - Commands after @Username
### Changed
 - Different colortag for private server warnings
### Fix
 - Won't crash when can't read settings file or find a value in it

## Server[0.93b] - 2015-12-31
### Added
 - Warning when private message target user does not exist
### Fix
 - Threads won't crash when user is disconnecting with no username set


## Client[0.95] - 2015-12-30
### Added
 - Offline messages (Offline users are tagged with light blue color)
 - App title changes when username is a duplicate now
## Changed
 - Improved private message sending (Type @@ + "username" + "]" + your message)
 - Added black background and colors for received private messages
## Fixed
 - Mistake that caused some tags to switch to size 10 fonts when changing size only

## Server[0.93] - 2015-12-30
### Added
 - Offline messages for registered users (Can be switched off by clients)
###
Changed
 - Improved replicant protection


## Client[0.94c] - 2015-12-28
### Added
 - Brown color for first line of link list, help, log,userlist 
### Changed
 - Link_list command from /link_list to /ll
### Fixed
 - Some tags were hardcoded to size 10 instead of loading from settings


## Client[0.94b] - 2015-12-28
### Added
 - Context menu buttons for entry widget clear and opening in browser
### Fixed
 - Client leave button not closing connection

## Server[0.91b] - 2015-12-28
### Fixed
 - Thread numbers in connection list were being searched instead of compared, e.g. number 4 could be found in thread 14. This caused wrong users to be dropped


## Client[0.94] - 2015-12-27
### Fixed
 - Recv thread [errno 9] bug


## Client[0.93] - 2015-12-27
### Added
 - Registration  (Plain text)
 - Password authentication (Plain text)
### Fixed
 - A warning is shown when connection to server is lost

## Server[0.91] - 2015-12-27
### Added
 - Username registration (Plain text)
 - Thread count configuration in server.cfg file


## Client[0.91t] - 2015-12-26
### Added